--- a/index.html
+++ b/index.html
@@ -1,10 +1,67 @@
-<!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8">
+<meta name=“description” content=“This is a website that to introduce my favorite artist”>
+<meta name=“viewport” content=“width=device-width, initial-scale=1”>
+
+<style>
+body {
+  background-color: #9370DB;
+}
+
+h1 {
+  color: White;
+  text-align: center;
+  font-size: 70px;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+
+<title>This is black pink</title>
+</head>
+
 <body>
 
-<h1>This is Susan</h1>
+<!headings>
+<h1>We are Black Pink</h1>
+<h2><p>"Pink is commonly used to portray prettiness, but BLACKPINK actually means to say that 'Pretty isn't everything. ' It also symbolizes that they are a team that encompasses not only beauty but also great talent."</h2><p>
+<h3>The Korean girl music group launched by YG Entertainment in 2016 is also the first girl group launched by the agency after 7 years since 2NE1 in 2009</h3>
+<h4>Everyone has leadership skills in different areas, so the team decided not to have a captain.</h4>
 
-<p>Say hi to everyone!.</p>
+
+
+<!Links>
+<a href="https://www.youtube.com/watch?v=gQlMMD8auMs">Learn more</a>
+</br> </br>
+
+
+<!image>
+<img src<img src="https://lh3.googleusercontent.com/lQ9LxVrPtPBTsyTiSY33qZJxSktHaS9KoghEENAdLELHst4sUlAcYbX1elKEx4a0-51utzH2M8Dn3g=w544-h544-p-l90-rj" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb KAlRDb" alt="BLACKPINK" data-noaft="1" style="width: 417px; height: 417px; margin: 0px;">
+
+<!list>
+<h2>Our Core Memeber</h2>
+
+<ul>
+  <li>Jisoo</li>
+  <li>Jennie</li>
+  <li>Rosé</li>
+  <li>Lisa</li>
+</ul>  
+
+<h2>My Favorite Ablum</h2>
+
+<ol>
+  <li>THE ALBUM</li>
+  <li>BORN PINK</li>
+  <li>SQUARE UP</li>
+</ol> 
 
 </body>
 </html>
+
+
+
